<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>phnx_io_ros</name>
    <version>0.0.0</version>
    <description>Interfaces with a microcontroller on a CAN bus</description>
    <maintainer email="jkrasan@umich.edu">Jordan Krasan</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>ackermann_msgs</depend>
    <depend>robot_state_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_flake8</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_pep257</test_depend>
    <test_depend>ament_clang_tidy</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
